20241030 homin category